--- a/src/index.css
+++ b/src/index.css
@@ -122,6 +122,14 @@ body.dark-mode .nav-link {
   background-color: #55041f;
 }
 
+.navbar-toggler{
+    background-color: #f9f9f9 !important;
+}
+
+.about-btn a {
+    width: 180px;
+}
+
 @media (max-width: 768px){
   .navbar{
     width: 100% !important;
@@ -140,11 +148,15 @@ body.dark-mode .nav-link {
 button.btn-close.text-reset {
     position: absolute;
     left: 10px;
-    top: 15px;
+    top: 26px;
     font-size: 20px;
     border-radius: 100%;
     border: 1px solid #000000;
     padding: 10px;
+}
+.btn-close {
+    --bs-btn-close-color: #ffffff !important;
+    background: #ffffff var(--bs-btn-close-bg) center / 1em auto no-repeat !important;
 }
 .about-text img {
     width: 200px;
@@ -155,5 +167,11 @@ button.btn-close.text-reset {
     height: auto;
     margin-bottom: 20px;
 }
+.about-btn{
+  display: flex
+;
+        justify-content: center;
+}
+
 
 }
