--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,7 @@ body.dark-mode .nav-link {
 .about-text {
     padding: 0 0 0 20px;
     text-align: center;
+    top: 20%;
 }
 .about-text h1{
   font-size: 40px !important;
